--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "next": "12.0.1",
     "react": "17.x",
     "react-dom": "17.x"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
