--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "dependencies": {
     "@notionhq/client": "^1.0.1",
     "dotenv": "^16.0.0",
-    "next": "12.0.1",
+    "next": "^12.3.4",
     "react": "17.x",
     "react-dom": "17.x"
   },
   "devDependencies": {
+    "@types/node": "^20.1.5",
+    "@types/react": "^18.2.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.4"
   }
 }
