--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "dotenv": "^16.0.0",
     "next": "^12.3.4",
     "react": "17.x",
-    "react-dom": "17.x"
+    "react-dom": "17.x",
+    "react-loading-skeleton": "^3.3.1",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.1",
     "@types/node": "^20.1.5",
     "@types/react": "^18.2.6",
     "autoprefixer": "^10.4.14",
+    "jsdom": "^22.0.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4"
